--- a/web-server/components/Heading/Heading.css
+++ b/web-server/components/Heading/Heading.css
@@ -1,6 +1,5 @@
 .Heading {
   position: relative;
-  padding: 0 0 32px;
 }
 
 .Heading:after {
